objects/VR_Related_Opportunities__c.object
<CustomObject>
    <description>STS PR3.0 - Junction Object between Opportunity and Visit Report</description>
    <fields>
        <fullName>ABB_Location_Bidding_Unit__c</fullName>
        <formula>Opportunity__r.ABB_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Location -Bidding Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_c__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+ Opportunity__r.Account.Id,  Opportunity__r.Account.Name)</formula>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+  Opportunity__r.Account.Id,  Opportunity__r.Account_End_User__r.Name)</formula>
        <label>Account End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity_To__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+ Opportunity__r.Alternative_Opportunity_Information_To__r.Id,  Opportunity__r.Alternative_Opportunity_To__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Opportunity To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+  Opportunity__r.End_User_Project__r.Id, Opportunity__r.End_User_Project__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Opportunity__r.Id,  Opportunity__r.Name)</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+ Opportunity__r.Owner.Id, Opportunity__r.Owner.FirstName  &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName)</formula>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Opportunity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunity</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Opportunity_To__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+ Opportunity__r.Sub_Opportunity_Information_To__r.Id, Opportunity__r.Sub_Opportunity_Information_To__r.Opportunity_Name__c)</formula>
        <label>Sub Opportunity To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Related_Opportunities__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Related Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Related Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>